# gru-rust

./: .env  Cargo.toml  README.md  config.json  justfile
api/: Cargo.toml
api/src/: error.rs  main.rs  routes.rs
entity/: Cargo.toml
entity/src/: item.rs
main/: Cargo.toml
main/src/: lib.rs  main.rs  setting.rs
main/src/api/: json.rs  mod.rs  v1.rs
main/src/api/handlers/: hello.rs  item.rs  login.rs  mod.rs
main/src/api/middleware/: jwt.rs
main/src/api/response/: item.rs  login.rs  mod.rs
main/src/commands/: create_admin.rs  hello.rs  migrate.rs  mod.rs  serve.rs
main/src/state/: mod.rs
migration/src/: lib.rs  m20240530_040654_create_item.rs
