[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
anyhow = "1.0.86"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
config = "0.14.0"
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5" }
axum-macros = "0.4.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tower-http = { version = "0.5.2", features = ["trace"] }
arc-swap = "1.7.1"
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

password-hash = "0.5.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
migration = { path = "../migration" }
entity = { path = "../entity" }
